--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <!-- HOME SECTION -->
     <div class="describe sections" id="home">
-        <div class="describe-text" data-aos="fade-right" data-aos-duration="1000">
+        <div class="describe-text">
           <h1>Capturing Your Views!</h1>
           <p>Photography help you to find beauty in the world, From the simpleness of everyday objects around us to the craziness of our
             children who brings us joy yet drive us crazy. Using a camera to find beuty in things and the 
@@ -91,8 +91,7 @@
             <a href="#"><button id="demo"><i class="glyphicon glyphicon-envelope"></i>Contact Us</button></a>
           </div>
         </div>
-        <img src="photography Images/photographer.png" alt="photographer" id="drawing"
-        data-aos="fade-left" data-aos-duration="1000">
+        <img src="photography Images/photographer.png" alt="photographer" id="drawing">
     </div>
     <div class="describe-part sections" id="home">
       <img src="photography Images/photographer.png" alt="photographer" id="drawing"
@@ -230,6 +229,26 @@
           </div>
         </div>
       </marquee>
+      <div class="wrap">
+        <!-- filter Items -->
+        <nav>
+          <div class="items">
+            <span class="item active" data-name="all">All</span>
+            <span class="item" data-name="bag">Portrait Shots</span>
+            <span class="item" data-name="shoe">Event Shots</span>
+            <span class="item" data-name="watch">Photo Editing</span>
+          </div>
+        </nav>
+        <!-- filter Images -->
+        <div class="gal">
+          <div class="image" data-name="bag"><span><img src="" alt=""></span></div>
+          <div class="image" data-name="shoe"><span><img src="" alt=""></span></div>
+          <div class="image" data-name="watch"><span><img src="" alt=""></span></div>
+          <div class="image" data-name="shoe"><span><img src="" alt=""></span></div>
+          <div class="image" data-name="bag"><span><img src="" alt=""></span></div>
+          <div class="image" data-name="watch"><span><img src="" alt=""></span></div>
+        </div>
+      </div>
      </div>
      <!-- END OUR PROJECTS SECTION -->
 
@@ -531,7 +550,6 @@
           </ul>
           <div class="owner">
             <div class="owner-info">
-            <img src="photography images/user.png" alt="owner" id="owner">
             <div class="owner-text">
               <p>Destiny Chukwu</p>
               <p>Media photographer</p>
@@ -545,7 +563,7 @@
         </div>
         <div class="copyright">
           <p>Destiny Chukwu &copy; Copyright 2022</p>
-          <p>Powered by: <a href="#">guru</a></p>
+          <p>DESIGNED BY GURU</p>
         </div>
       </div>
      </footer>
