--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </p>
     </div>
     <div class="about">
-      <h1 data-aos="fade-right" data-aos-duration="1000">Media Services</h1>
+      <h1>Media Services</h1>
       <div class="services">
        <div class="serve"  data-aos="fade-left" data-aos-duration="1000">
         <div class="services-type">
@@ -233,22 +233,30 @@
         <!-- filter Items -->
         <nav>
           <div class="items">
-            <span class="item active" data-name="all">All</span>
-            <span class="item" data-name="bag">Portrait Shots</span>
-            <span class="item" data-name="shoe">Event Shots</span>
-            <span class="item" data-name="watch">Photo Editing</span>
+            <span class="item shuffle" data-name="all">All</span>
+            <span class="item" data-name="Portrait">Portrait Shots</span>
+            <span class="item" data-name="Event">Event Shots</span>
+            <span class="item" data-name="Photo">Photo Editing</span>
           </div>
         </nav>
         <!-- filter Images -->
         <div class="gal">
-          <div class="image" data-name="bag"><span><img src="" alt=""></span></div>
-          <div class="image" data-name="shoe"><span><img src="" alt=""></span></div>
-          <div class="image" data-name="watch"><span><img src="" alt=""></span></div>
-          <div class="image" data-name="shoe"><span><img src="" alt=""></span></div>
-          <div class="image" data-name="bag"><span><img src="" alt=""></span></div>
-          <div class="image" data-name="watch"><span><img src="" alt=""></span></div>
+          <div class="image" data-name="Portrait"><span><img src="photography Images/6.jpg" alt=""></span></div>
+          <div class="image" data-name="Event"><span><img src="photography Images/4.jpg" alt=""></span></div>
+          <div class="image" data-name="Photo"><span><img src="photography Images/2.jpg" alt=""></span></div>
+          <div class="image" data-name="Event"><span><img src="photography Images/7.jpg" alt=""></span></div>
+          <div class="image" data-name="Portrait"><span><img src="photography Images/8.jpg" alt=""></span></div>
+          <div class="image" data-name="Photo"><span><img src="photography Images/9.jpg" alt=""></span></div>
         </div>
       </div>
+      <div class="preview-box">
+        <div class="details">
+          <span class="title"><p></p></span>
+          <span class="icon-x glyphicon glyphicon-remove"></span>
+        </div>
+        <div class="image-box"><img src="" alt=""></div>
+      </div>
+      <div class="shadow"></div>    
      </div>
      <!-- END OUR PROJECTS SECTION -->
 
